[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/MenuUI.gd" type="Script" id=1]
[ext_resource path="res://src/UI/HistoryPanel.gd" type="Script" id=2]

[node name="MenuUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="." groups=[
"ui",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -128.0
margin_right = 80.0
margin_bottom = 128.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 341.0

[node name="GameLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_right = 146.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "KaizNike's World Gen"
align = 1

[node name="RegenButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "Regenerate Worlds"

[node name="SettingsLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_top = 42.0
margin_right = 146.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Settings:"
align = 1

[node name="SizeLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_top = 60.0
margin_right = 146.0
margin_bottom = 74.0
text = "Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeSlider" type="HSlider" parent="PanelContainer/VSplitContainer"]
margin_top = 78.0
margin_right = 146.0
margin_bottom = 94.0
min_value = 60.0
max_value = 750.0
step = 2.0
value = 250.0
tick_count = 5
ticks_on_borders = true

[node name="TempLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_top = 98.0
margin_right = 146.0
margin_bottom = 112.0
text = "Temperature:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempSlider" type="HSlider" parent="PanelContainer/VSplitContainer"]
margin_top = 116.0
margin_right = 146.0
margin_bottom = 132.0
min_value = -100.0
tick_count = 5
ticks_on_borders = true

[node name="HeightLabel" type="Label" parent="PanelContainer/VSplitContainer"]
margin_top = 136.0
margin_right = 146.0
margin_bottom = 150.0
text = "Height:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightSlider" type="HSlider" parent="PanelContainer/VSplitContainer"]
margin_top = 154.0
margin_right = 146.0
margin_bottom = 170.0
min_value = -100.0
tick_count = 5
ticks_on_borders = true

[node name="RoundToggle" type="CheckButton" parent="PanelContainer/VSplitContainer"]
margin_top = 174.0
margin_right = 146.0
margin_bottom = 214.0
pressed = true
text = "Is Round?"

[node name="HistoryButton" type="Button" parent="PanelContainer/VSplitContainer"]
visible = false
margin_top = 174.0
margin_right = 146.0
margin_bottom = 194.0
text = "Read History"

[node name="ExportButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 218.0
margin_right = 146.0
margin_bottom = 238.0
text = "Export"

[node name="SaveButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 242.0
margin_right = 146.0
margin_bottom = 262.0
text = "Save World"

[node name="LoadButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 266.0
margin_right = 146.0
margin_bottom = 286.0
text = "Load World"

[node name="FolderButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 290.0
margin_right = 146.0
margin_bottom = 310.0
text = "Open Folder"

[node name="ExitButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 314.0
margin_right = 146.0
margin_bottom = 334.0
text = "Exit"

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="LineEdit" type="LineEdit" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 0 )
placeholder_text = "Enter timestamp"

[node name="HistoryPanel" type="PopupPanel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 500.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryText" type="RichTextLabel" parent="HistoryPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 496.0
text = "In the beginning..."

[connection signal="pressed" from="PanelContainer/VSplitContainer/RegenButton" to="." method="_on_RegenButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/HistoryButton" to="HistoryPanel" method="_on_HistoryButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/FolderButton" to="." method="_on_FolderButton_pressed"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="text_changed" from="PopupPanel/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="PopupPanel/LineEdit" to="." method="_on_LineEdit_text_entered"]
